        Reviewed by Anders.

http://bugs.webkit.org/show_bug.cgi?id=15436
        Wrong node order for XPath reverse axes

        Test: fast/xpath/reverse-axes.html

        * xml/XPathStep.cpp:
        (WebCore::XPath::Step::nodesInAxis): Do not prematurely sort reverse
        axes. Generate preceding axis nodes in reversed document order.



Canonical link: https://commits.webkit.org/20519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26529 268f45cc-cd09-0410-ab3c-d52691b4dbfc